<resources>
    <string name="app_name">Court Counter</string>
    <string name="action_settings">Settings</string>

    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>

    <string name="default_score">0</string>
    <string name="point_3">+3 Points</string>
    <string name="point_2">+2 Points</string>
    <string name="point_1">Free Throw</string>
    <string name="reset">Reset</string>
</resources>
