<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/default_score"
                android:textSize="54sp" />

            <Button
                android:id="@+id/a_point_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="updateScore"
                android:text="@string/point_3" />

            <Button
                android:id="@+id/a_point_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="updateScore"
                android:text="@string/point_2" />

            <Button
                android:id="@+id/a_point_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="updateScore"
                android:text="@string/point_1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/default_score"
                android:textSize="54sp" />

            <Button
                android:id="@+id/b_point_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="updateScore"
                android:text="@string/point_3" />

            <Button
                android:id="@+id/b_point_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="updateScore"
                android:text="@string/point_2" />

            <Button
                android:id="@+id/b_point_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="updateScore"
                android:text="@string/point_1" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="updateScore"
        android:text="@string/reset" />

</RelativeLayout>